--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,45 @@
    Assignment: Live Bait Website
 */
 
+
+:root{
+    --back-prim: #b3b3b3;
+    --back-dark: #404040;
+    --back-light: #e6e6e6;
+    --shadow: 0 2px 3px rgba(75, 75, 75, 0.785);
+    --alt-font-one: black;
+}
+
+html {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: var(--back-dark);
+    
+}
+
+body {
+    background-color: var(--back-prim);
+    margin: 30px 50px;
+    line-height: 1.5;
+}
+
+img {
+    max-width: 100%;
+}
+
+footer {
+    background-color: var(--back-dark);
+    text-align: center;
+    color: white;
+    padding: 1rem;
+    margin: 0px -50px -30px -50px;
+}
+
 /* header section */
 .h-container {
     text-align: center;
-    background-color: rebeccapurple;
-    background-size: cover;
+    background-color: var(--back-light);
+    box-shadow: var(--shadow);
+    margin: -25px -20px 0 -20px;
 }
 
 .h-container img {
@@ -16,14 +50,342 @@
     border-radius: 5px;
 }
 
+/* navigation */
+nav ul{
+    display: grid;
+    grid-gap: 20px;
+    list-style: none;
+    padding: 0;
+    grid-template-columns: repeat(4,1fr);
+    text-align: center;
+}
+
+nav a{
+    background-color: var(--back-dark);
+    color: var(--back-light);
+    border-radius: .25rem;
+    padding: 0.5rem 1.2rem;
+    text-decoration: none;
+    box-shadow: var(--shadow);
+}
+
+nav a:hover {
+    padding: 0.6rem 1.3rem;
+}
+
+/*-----home content-----*/
+
+/* top container */
+.top-container {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-areas: 
+        'showcase showcase services';
+    padding: 3rem;
+}
+
+.top-container div {
+    background-color: var(--back-light);
+    box-shadow: var(--shadow);
+    padding: 15px;
+    font-weight: bold;
+    border-radius: .25rem;
+}
+
+.top-container div h1 {
+    text-align: center;
+}
+
+.showcase {
+    text-align: center;
+}
+
+
+/* mid container */
+.mid-container {
+    display: grid;
+    grid-gap: 40px;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 30px 50px;
+}
+
+.mid-container .box-a{
+    background: url("img/shop-bait.jpg");
+    background-size: cover;
+    padding: 80px;
+    text-align: center;
+    color: var(--alt-font-one);
+    border-radius: .25rem;
+    box-shadow: var(--shadow);
+}
+
+.mid-container .box-b {
+    background: url("img/shop-tackle.jpg");
+    background-size: cover;
+    padding: 80px;
+    text-align: center;
+    color: var(--alt-font-one);
+    border-radius: .25rem;
+    box-shadow: var(--shadow);
+}
+
+.mid-container .box-c {
+    background: url("img/fire-wood.jpg");
+    background-size: cover;
+    padding: 80px;
+    text-align: center;
+    color: var(--alt-font-one);
+    border-radius: .25rem;
+    box-shadow: var(--shadow);
+}
+
+.mid-container div h2 {
+    background-color: #e6e6e6ab;
+    border-radius: .25rem;
+}
+
+.mid-container a {
+    background-color: var(--back-dark);
+    color: var(--back-light);
+    border-radius: .25rem;
+    padding: 0.5rem 1.2rem;
+    text-decoration: none;
+    box-shadow: var(--shadow);
+}
+
+/* bottom container */
+.bottom-container {
+    background-color: var(--back-light);
+    display: grid;
+    grid-gap: 500px;
+    grid-template-columns: 1fr 1fr;
+    padding: 3rem;
+    margin: 50px;
+    border-radius: .25rem;
+    box-shadow: var(--shadow);
+}
+
+.location {
+    text-align: center;
+}
+
+.fa-brands {
+    font-size: 3em;
+}
+
+/*-----home content-----*/
+
+
+/*-----bait content-----*/
+
+/* top container */
+.b-top-container {
+    text-align: center;
+    display: grid;
+    grid-gap: 40px;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 10px;
+}
+
+.b-top-container div{
+    background-color: var(--back-light);
+    border: 2px solid black;
+    border-radius: .25rem;
+    padding: 5px;
+    box-shadow: var(--shadow);
+}
+
+.live-content img{
+    border-radius: .5rem;
+    box-shadow: var(--shadow);
+}
+
+.b-top-container p {
+    font-style: italic;
+}
+
+/* middle container */
+.b-mid-container {
+    text-align: center;
+    display: grid;
+    grid-gap: 40px;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 10px;
+}
+
+.b-mid-container div {
+    background-color: var(--back-light);
+    border: 2px solid black;
+    border-radius: .25rem;
+    padding: 5px;
+    box-shadow: var(--shadow);
+}
+
+.b-mid-container p {
+    font-style: italic
+}
+
 .b-bottom-container {
     text-align: center;
 }
 
-table td {
-    border: 1px solid black;
+/* table */
+
+table {
+    margin: 20px 40px 20px 0px;
+    background: url(img/iStock-943355988-scaled.jpg);
+    background-size: cover;
+    border-radius: .25rem;
+    box-shadow: var(--shadow);
+    border-collapse: collapse;
 }
 
-td {
+table td {
+    border: 2px solid black;
+    color: black;
+    background-color: #e6e6e667;
+}
+
+table h3 {
+    padding: 5px;
+}
+
+table p {
+    font-style: italic;
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+/*-----bait content-----*/
+
+/*-----tackle content-----*/
+
+/* top container */
+.t-top-container {
+    text-align: center;
+    display: grid;
+    grid-gap: 40px;
+    grid-template-columns: repeat(3, 1fr);
     padding: 10px;
 }
+
+.t-top-container div{
+    background-color: var(--back-light);
+    border: 2px solid black;
+    border-radius: .25rem;
+    padding: 5px;
+    box-shadow: var(--shadow);
+}
+
+.tackle-content img{
+    border-radius: .5rem;
+    box-shadow: var(--shadow);
+}
+
+.t-top-container p {
+    font-style: italic;
+}
+
+/* middle container */
+.t-mid-container {
+    text-align: center;
+    display: grid;
+    grid-gap: 40px;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 10px;
+}
+
+.t-mid-container div{
+    background-color: var(--back-light);
+    border: 2px solid black;
+    border-radius: .25rem;
+    padding: 5px;
+    box-shadow: var(--shadow);
+}
+
+.t-mid-container p {
+    font-style: italic;
+}
+
+/* bottom container */
+.t-bottom-container {
+    text-align: center;
+    display: grid;
+    grid-gap: 40px;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+.t-bottom-container div{
+    background-color: var(--back-light);
+    border: 2px solid black;
+    border-radius: .25rem;
+    padding: 5px;
+    box-shadow: var(--shadow);
+}
+
+.t-bottom-container p {
+    font-style: italic;
+}
+
+/*-----tackle content-----*/
+
+/*-----services content-----*/
+
+.s-top-container {
+        display: grid;
+        grid-gap: 20px;
+        grid-template-areas: 
+            'header header s-box-a'
+            'header header s-box-b';
+        padding: 3rem;
+}
+
+.s-top-container header {
+    grid-area: header;
+    background-color: var(--back-light);
+    padding: 3rem;
+    border-radius: .25rem;
+    box-shadow: var(--shadow);
+}
+
+.s-top-container div {
+    text-align: center;
+    background-color: var(--back-light);
+    padding: 10px 10px 30px 10px;
+    border-radius: .25rem;
+    box-shadow: var(--shadow);
+}
+
+.s-top-container div h4 {
+    padding: 0 30px 50px 30px;
+}
+
+.s-top-container a {
+    background-color: var(--back-dark);
+    color: var(--back-light);
+    padding: 0.5rem 1.2rem;
+    border-radius: .25rem;
+    text-decoration: none;
+    box-shadow: var(--shadow);
+}
+
+/* bottom container */
+.s-bottom-container {
+    display: grid;
+    grid-gap: 25px;
+    grid-template-columns: repeat(2, 1fr);
+    background-color: var(--back-light);
+    border-radius: .25rem;
+    box-shadow: var(--shadow);
+    padding: 25px;
+    margin-bottom: 20px;
+}
+
+.s-bottom-container img {
+    border-radius: .25rem;
+    box-shadow: var(--shadow);
+}
+
+/*-----services content-----*/
